# cpp-project

./: .gitmodules
Arbitrage/ArbitrageEngine/: CMakeLists.txt  CMakeLists.txt.user.77f2b49  main.cpp  pricemonitor.cpp  pricemonitor.h
Arbitrage/GetTokenFromTelegram/: GetTokenFromTelegram.slnx
Arbitrage/GetTokenFromTelegram/GetTokenFromTelegram/: GetTokenFromTelegram.csproj  Program.cs
geometry-figures/: main.cpp
trade-terminal/QuantumTrader/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  reading_list.md  speech_diploma.md
trade-terminal/QuantumTrader/docs/diagrams/: plantuml_export.puml
trade-terminal/QuantumTrader/src/: README.md  main.cpp
trade-terminal/QuantumTrader/src/client-cpp/: CMakeLists.txt  main.cpp  resources.qrc
trade-terminal/QuantumTrader/src/client-cpp/ui/: main.cpp  mainwindow.cpp  mainwindow.h
trade-terminal/QuantumTrader/src/client-cpp/ui/charts/: fastchart.cpp  fastchart.h
trade-terminal/QuantumTrader/src/client-cpp/ui/charts/shaders/: grid.frag  grid.vert
trade-terminal/QuantumTrader/src/core/events/: EventBus.cpp  EventBus.h
trade-terminal/QuantumTrader/src/core/managers/: LinkManager.cpp  LinkManager.h  MarketDataManager.cpp  MarketDataManager.h
trade-terminal/QuantumTrader/src/core/ml/: MarketPredictor.cpp  MarketPredictor.h
trade-terminal/QuantumTrader/src/core/models/: Candle.h  ChartDependencies.h
trade-terminal/QuantumTrader/src/core/network/bybit/: ByBitParser.cpp  ByBitParser.h  BybitConnector.cpp  BybitConnector.h  WebSocketPool.cpp  WebSocketPool.h  WebSocketWorker.cpp  WebSocketWorker.h
trade-terminal/QuantumTrader/src/core/network/common/: IExchangeConnector.h  NetworkTypes.h
trade-terminal/QuantumTrader/src/core/storage/: CandleHistoryManager.cpp  CandleHistoryManager.h
trade-terminal/QuantumTrader/src/resources/styles/: dark_theme.qss
trade-terminal/QuantumTrader/src/ui/: MainWindow.cpp  MainWindow.h  WindowManager.cpp  WindowManager.h
trade-terminal/QuantumTrader/src/ui/charts/: ChartContainer.cpp  ChartContainer.h  ChartTypes.h  FastChart.cpp  FastChart.h
trade-terminal/QuantumTrader/src/ui/charts/layers/: AxisLayer.cpp  AxisLayer.h  CandleLayer.cpp  CandleLayer.h  CrosshairLayer.cpp  CrosshairLayer.h  GridLayer.cpp  GridLayer.h  IChartLayer.h
trade-terminal/QuantumTrader/src/ui/charts/orderbook/: IOrderBook.cpp  IOrderBook.h  OrderBookBase.cpp  OrderBookBase.h  OrderBookClassic.cpp  OrderBookClassic.h  OrderBookCluster.cpp  OrderBookCluster.h  OrderBookContainer.cpp  OrderBookContainer.h  OrderBookDataTypes.h  OrderBookModel.cpp  OrderBookModel.h  OrderBookRenderTypes.h  OrderBookTypes.h
trade-terminal/QuantumTrader/src/ui/charts/timeandsales/: TimeAndSalesContainer.cpp  TimeAndSalesContainer.h  TimeAndSalesDataTypes.h  TimeAndSalesWidget.cpp  TimeAndSalesWidget.h
trade-terminal/QuantumTrader/src/ui/components/: CssHighlighter.cpp  CssHighlighter.h  QssEditor.cpp  QssEditor.h  SymbolLineEdit.cpp  SymbolLineEdit.h  ThemeEditorWidget.cpp  TimeFrameWidget.cpp  TimeFrameWidget.h
trade-terminal/QuantumTrader/src/ui/components/theme_editor/: CssHighlighter.cpp  QssEditor.cpp  ThemeEditorWidget.cpp  ThemeEditorWidget.h
trade-terminal/QuantumTrader/src/ui/frame/: ActionManager.cpp  ActionManager.h  MainWindow.cpp  MainWindow.h  WindowManager.cpp  WindowManager.h
trade-terminal/QuantumTrader/src/utils/: AppInitializer.cpp  AppInitializer.h  MockDataGenerator.h  ThemeManager.cpp  ThemeManager.h
